# advent-of-code

./: LICENSE  README.md
2018/haskell/: advent-of-code2018.cabal  stack.yaml
2018/haskell/app/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day08.hs  Day09.hs
2018/haskell/src/: MyLens.hs
2018/rust/: Cargo.toml  input-day07-simple  shell.nix
2019/racket/: .gitignore  day01.rkt  day02.rkt
2020/fsharp/: README.md  shell.nix
2020/haskell/: ChangeLog.md  README.md  advent-of-code.cabal  advent-of-code2020.cabal  stack.yaml
2020/haskell/app/: Day10.hs  Day11.hs  Day20.hs  Day25.hs
2020/haskell/src/: Lib.hs
2020/haskell/test/: DocTest.hs
2020/racket/: day01.rkt  day02.rkt  day03.rkt  day04.rkt  day05.rkt  day06.rkt  day07-graph.dot  day07-input  day07-input-example3  day07.rkt  day08.rkt  day09.rkt  day18.rkt  shell.nix
2021/coq/: .gitignore  Day01.hs  Day01.v  Makefile  README.md  _CoqProject  day01-make-real-hs.sh  flake.nix
2022/coq/: Day01.v  ExtractionExample.v  flake.nix
2022/coq/day01/: .gitignore
2022/coq/day02/: Day01.v  Day02.v  README.md  day01-make-real-hs.sh  day02-make-real-hs.sh
2022/haskell/: .gitignore  LICENSE  advent-of-code2020.cabal  advent-of-code2022.cabal  input-day20-example2
2022/haskell/app/: Day01.hs  Day10.hs  Day20More.hs
2022/haskell/src/: TemplateLib.hs
