cabal-version: 1.12

name:           advent-of-code2020
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/cdepillabout/advent-of-code2018#readme>
homepage:       https://github.com/cdepillabout/advent-of-code2018#readme
bug-reports:    https://github.com/cdepillabout/advent-of-code2018/issues
author:         Dennis Gosnell
maintainer:     cdep.illabout@gmail.com
copyright:      Copyright (c) 2018 Dennis Gosnell
license:        BSD3
license-file:   LICENSE
build-type:     Custom
extra-source-files:
    README.md
    ChangeLog.md

-- This custom setup is so that the doctests can be easily run.
custom-setup
  setup-depends:     base
                   , Cabal
                   , cabal-doctest >=1.0.2 && <1.1

source-repository head
  type: git
  location: https://github.com/cdepillabout/advent-of-code2018

-- executable day25
--   main-is:          Day25.hs
--   hs-source-dirs:   app
--   -- Commonly used libraries.
--   --
--   -- Add any library dependencies you might need here.
--   build-depends:      base >=4.11 && <5
--                     -- , aeson
--                     -- , attoparsec
--                     -- , bytestring
--                     -- , conduit
--                     -- , conduit-extra
--                     -- , containers
--                     , classy-prelude
--                     -- , lens
--                     -- , megaparsec
--                     -- , parsec
--                     -- , pretty-simple
--                     -- , text
--                     -- , time
--                     -- , unordered-containers
--                     -- , vector
--   ghc-options:        -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -Wno-unused-imports -Wno-unused-top-binds -O2
--   -- Commonly used language extensions.
--   --
--   -- Add language extensions you want to use here so it doesn't clutter the top
--   -- of your Haskell files.
--   default-extensions: AutoDeriveTypeable
--                       BangPatterns
--                       BinaryLiterals
--                       BlockArguments
--                       ConstraintKinds
--                       DataKinds
--                       DefaultSignatures
--                       DeriveDataTypeable
--                       DeriveFoldable
--                       DeriveFunctor
--                       DeriveGeneric
--                       DeriveTraversable
--                       DoAndIfThenElse
--                       EmptyCase
--                       EmptyDataDecls
--                       ExistentialQuantification
--                       ExplicitNamespaces
--                       FlexibleContexts
--                       FlexibleInstances
--                       FunctionalDependencies
--                       GADTs
--                       GeneralizedNewtypeDeriving
--                       InstanceSigs
--                       KindSignatures
--                       LambdaCase
--                       MultiParamTypeClasses
--                       MultiWayIf
--                       NamedFieldPuns
--                       NoImplicitPrelude
--                       OverloadedStrings
--                       PartialTypeSignatures
--                       PatternGuards
--                       PolyKinds
--                       RankNTypes
--                       RecordWildCards
--                       ScopedTypeVariables
--                       StandaloneDeriving
--                       TupleSections
--                       TypeFamilies
--                       TypeSynonymInstances
--                       ViewPatterns
--   default-language: Haskell2010

executable day10
  main-is:          Day10.hs
  hs-source-dirs:   app
  -- Commonly used libraries.
  --
  -- Add any library dependencies you might need here.
  build-depends:      base >=4.11 && <5
                    -- , aeson
                    -- , attoparsec
                    -- , bytestring
                    -- , conduit
                    -- , conduit-extra
                    -- , containers
                    , classy-prelude
                    -- , lens
                    -- , megaparsec
                    -- , parsec
                    -- , pretty-simple
                    -- , text
                    -- , time
                    -- , unordered-containers
                    -- , vector
  ghc-options:        -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -Wno-unused-imports -Wno-unused-top-binds -O2
  -- Commonly used language extensions.
  --
  -- Add language extensions you want to use here so it doesn't clutter the top
  -- of your Haskell files.
  default-extensions: AutoDeriveTypeable
                      BangPatterns
                      BinaryLiterals
                      BlockArguments
                      ConstraintKinds
                      DataKinds
                      DefaultSignatures
                      DeriveDataTypeable
                      DeriveFoldable
                      DeriveFunctor
                      DeriveGeneric
                      DeriveTraversable
                      DoAndIfThenElse
                      EmptyCase
                      EmptyDataDecls
                      ExistentialQuantification
                      ExplicitNamespaces
                      FlexibleContexts
                      FlexibleInstances
                      FunctionalDependencies
                      GADTs
                      GeneralizedNewtypeDeriving
                      InstanceSigs
                      KindSignatures
                      LambdaCase
                      MultiParamTypeClasses
                      MultiWayIf
                      NamedFieldPuns
                      NoImplicitPrelude
                      OverloadedStrings
                      PartialTypeSignatures
                      PatternGuards
                      PolyKinds
                      RankNTypes
                      RecordWildCards
                      ScopedTypeVariables
                      StandaloneDeriving
                      TupleSections
                      TypeFamilies
                      TypeSynonymInstances
                      ViewPatterns
  default-language: Haskell2010

-- This is a test suite that will run doctests on your code.  This is really
-- nice when you want to write a small test inline to make sure your code is
-- working.  It is lighter weight than pulling in a whole testing framework,
-- but I still find it very helpful for these types of programming contests.
--
-- There are examples of writing doctests in both the library and executable.
--
-- You can run the doctests with the following command:
--
-- $ stack test --fast
test-suite doctests
  -- This lists the executables for which doctest will be run.  Normally you
  -- only need to list the executable you are currently working on, since you
  -- don't need the doctests to be run for all your already solved exercises.
  --
  -- So when you finish the solution for day 1 and start working on day 2, you
  -- will replace `exe:day01` with `exe:day02`.
  x-doctest-components: lib exe:day11
  type:                exitcode-stdio-1.0
  main-is:             DocTest.hs
  hs-source-dirs:      test
  build-depends:       base
                     , doctest
                     , QuickCheck
                     , template-haskell
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
