cabal-version: 1.12

name:           advent-of-code2022
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/cdepillabout/advent-of-code#readme>
homepage:       https://github.com/cdepillabout/advent-of-code#readme
bug-reports:    https://github.com/cdepillabout/advent-of-code/issues
author:         Dennis Gosnell
maintainer:     cdep.illabout@gmail.com
copyright:      Copyright (c) 2018 Dennis Gosnell
license:        BSD3
license-file:   LICENSE
build-type:     Custom
extra-source-files:
    README.md
    ChangeLog.md

-- This custom setup is so that the doctests can be easily run.
custom-setup
  setup-depends:     base
                   , Cabal
                   , cabal-doctest >=1.0.2 && <1.1

source-repository head
  type: git
  location: https://github.com/cdepillabout/advent-of-code

library
  hs-source-dirs:      src
  exposed-modules:     TemplateLib
  build-depends:      base >=4.11 && <5
                    -- , aeson
                    -- , attoparsec
                    -- , bytestring
                    -- , conduit
                    -- , conduit-extra
                    -- , containers
                    -- , classy-prelude
                    -- , lens
                    -- , megaparsec
                    -- , parsec
                    -- , pretty-simple
                    , singletons
                    , singletons-base
                    , singletons-th
                    , template-haskell
                    , text
                    -- , time
                    -- , unordered-containers
                    -- , vector
  default-language:    Haskell2010
  ghc-options:        -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -Wno-unused-imports -Wno-unused-top-binds -O2

executable day01
  main-is:          Day01.hs
  hs-source-dirs:   app
  build-depends:      base >=4.11 && <5
                    , advent-of-code2022
                    -- , aeson
                    -- , attoparsec
                    -- , bytestring
                    -- , conduit
                    -- , conduit-extra
                    -- , containers
                    -- , classy-prelude
                    -- , lens
                    -- , megaparsec
                    -- , parsec
                    -- , pretty-simple
                    , singletons
                    , singletons-base
                    , singletons-th
                    , template-haskell
                    , text
                    -- , time
                    -- , unordered-containers
                    -- , vector
  ghc-options:        -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -Wno-unused-imports -Wno-unused-top-binds -O2
  default-language: Haskell2010

test-suite doctests
  x-doctest-components: lib exe:day01
  type:                exitcode-stdio-1.0
  main-is:             DocTest.hs
  hs-source-dirs:      test
  build-depends:       base
                     , doctest
                     , QuickCheck
                     , template-haskell
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
